--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "ENG_ITSS",
-	"name": "ENG_ITSS",
+	"short_name": "Minna no Eigo",
+	"name": "Minna no Eigo",
 	"icons": [
 		{
 			"src": "favicon.ico",
