--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,15 @@
 		"axios": "^0.21.1",
 		"compressorjs": "^1.0.7",
 		"html-to-react": "^1.5.0",
+		"jquery": "^3.6.3",
 		"query-string": "^7.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-dom-server": "^0.0.5",
 		"react-facebook-login": "^4.1.1",
 		"react-google-login": "^5.2.2",
 		"react-hook-form": "^7.8.4",
+		"react-html-parser": "^2.0.2",
 		"react-redux": "^7.2.4",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
